Fixed footer spacing

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -373,6 +373,11 @@ footer a:hover {
     font-size: 14px;
   }
 
+  .footer-spacer {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
   footer {
     text-align: center
   }
